tests/testdata/negative/nonbool_cond.go
package main
func main() {
  if 5 {
    fmt.Println("x");
  }
}
